--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Portfolio</title>
-    </head>
-    <body>
-        <h1>Isso é um titulo</h1>
-        <h2>Isso é um sub-titulo</h2>
-        <p>Isso é um paragrafo</p>
-        <img src="html.png" alt="Logo HTML 5" title="HTML 5">
-    </body>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>Isso é um titulo</h1>
+    <h2>Isso é um sub-titulo</h2>
+
+    <p>Paragrafo</p>
+    <img src="html.png" alt="logo html 5">
+</body>
+
 </html>
