--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portofolio</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <h1>Isso é um titulo</h1>
-    <h2>Isso é um sub-titulo</h2>
+    <header></header>
+    <main class="container">
+        <section class="container_left">
+            <h1 class="text1">Eleve seu negócio digital a outro nível <strong class="textColor-acqua">com um Front-end de qualidade!</strong></h1>
+            
+            <p class="text2">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            
+            <div class="botoesDiv">
+                <a href="https://www.instagram.com/rdsantos1981/" class="bt_portfolio">Instagram</a>
+                <a href="https://github.com/rsanto0" class="bt_portfolio" style="left: 692px;">Github</a>
+            </div>
+        </section>
 
-    <p>Paragrafo</p>
-    <img src="html.png" alt="logo html 5">
+
+        <img src="Imagem.png" alt="profile photo" title="Rodrigo Diniz">
+    </main>
+    <footer></footer>
 </body>
-
 </html>
