--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,7 +14,7 @@
         <section class="container_left">
             <h1 class="text1">Eleve seu negócio digital a outro nível <strong class="textColor-acqua">com um Front-end de qualidade!</strong></h1>
             
-            <p class="text2">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="text2">Olá! Sou Rodrigo Diniz, desenvolvedor Java FullStack com especialidade em Angular, React, Javascript, HTML e CSS. Atuando a 13 anos na area de tecnologia voltado para desenvolmenot de softwares.</p>
             
             <div class="botoesDiv">
                 <a href="https://www.instagram.com/rdsantos1981/" class="bt_portfolio">Instagram</a>
